load factory erasing all setting without any confirmation #65702

Closed
opened 2019-06-11 00:18:10 +02:00 by -- · 11 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 26.20.100.6890

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19d
Worked: (optional)

Short description of error
[I chose load factory setting and it erased all settings without any confirmation. this is very dangerous and silly ]

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 26.20.100.6890 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: `030c7df19d` Worked: (optional) **Short description of error** [I chose load factory setting and it erased all settings without any confirmation. this is very dangerous and silly ] **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @zgorg

Added subscriber: @zgorg

#65164 was marked as duplicate of this issue

#65164 was marked as duplicate of this issue
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
Member

Probably settings "auto save " is enabled? The settings have a new auto save feature. This is not a file related thing.

Probably settings "auto save " is enabled? The settings have a new auto save feature. This is not a file related thing.
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2019-06-11 10:36:34 +02:00
Member

I am getting this, too. It is happening when you have Auto Save Preferences disabled, which is indeed dangerous I think...
Without checking code, this might be because Auto Save Preferences gets enabled due to Load Factory Settings? And thus then it the gets saved?

Setting this to High priority...
@ideasman42: mind checking?

I am getting this, too. It is happening when you have `Auto Save Preferences` **disabled**, which is indeed dangerous I think... Without checking code, this might be because `Auto Save Preferences` gets enabled due to Load Factory Settings? And thus then it the gets saved? Setting this to High priority... @ideasman42: mind checking?

I can't redo this, running "Load Factory Settings" from the File->Defaults or the Preferences menu.

Exiting after if not saving the preferences (the auto save option isn't changing in the menu either).

Not sure if it helps but can you give exact steps to redo this?

I can't redo this, running "Load Factory Settings" from the File->Defaults or the Preferences menu. Exiting after if not saving the preferences (the auto save option isn't changing in the menu either). Not sure if it helps but can you give exact steps to redo this?
Member

Happens here if you do it from the User Preferences "burger" menu [Save Preferences button is gone then and exiting after seems to save preferences -- even though Auto Save Preferences was disabled prior]

Happens here if you do it from the User Preferences "burger" menu [Save Preferences button is gone then and exiting after seems to save preferences -- even though `Auto Save Preferences` was disabled prior]

This issue was referenced by 43d3572655

This issue was referenced by 43d35726555575d3fd31ba0912eea886308676db

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @GavinScott, @JacquesLucke, @brecht

Added subscribers: @GavinScott, @JacquesLucke, @brecht
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65702
No description provided.